# irc_bot

./: Cargo.toml  README.md
src/: bot.rs  channel.rs  client.rs  lib.rs  logging.rs  main.rs  messages.rs  utils.rs  world.rs
